force-app/main/default/objects/My_Favourite_Movie__c/My_Favourite_Movie__c.object-meta.xml
<CustomObject>
    <label>My Favourite Movie</label>
    <nameField>
        <displayFormat>MFM-{00000}</displayFormat>
        <label>My Favourite Movies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Favourite Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>