force-app/main/default/objects/My_Favourite_Movie__c/fields/Actors__c.field-meta.xml
<CustomField>
    <fullName>Actors__c</fullName>
    <label>Actors</label>
    <type>TextArea</type>
</CustomField>