force-app/main/default/objects/My_Favourite_Movie__c/fields/Movie_Name__c.field-meta.xml
<CustomField>
    <fullName>Movie_Name__c</fullName>
    <description>Field to store Movie name.</description>
    <label>Movie Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>