force-app/main/default/objects/My_Favourite_Movie__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <label>Plot</label>
    <type>TextArea</type>
</CustomField>