force-app/main/default/objects/My_Favourite_Movie__c/fields/Poster__c.field-meta.xml
<CustomField>
    <fullName>Poster__c</fullName>
    <label>Poster</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>