force-app/main/default/objects/My_Favourite_Movie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Movie_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>